[package]
name = "head_empty"
version = "0.1.0"
authors = ["ldesgoui <ldesgoui@gmail.com>"]
edition = "2018"

[features]
default = ["internal-doc-hidden"]
internal-doc-hidden = []

[dependencies]
erased-serde = "0.3"
linkme = "0.2"
once_cell = "1"
paste = "1"
serde = "1"

[dev-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
