[package]
name = "head-empty"
version = "0.1.0"
authors = ["ldesgoui <ldesgoui@gmail.com>"]
edition = "2018"
description = "Define parts of your configuration schema throughout your codebase"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ldesgoui/head-empty"
keywords = ["serde", "config"]
categories = ["config"]
readme = "README.md"

[features]
default = ["internal-doc-hidden"]
internal-doc-hidden = []

[dependencies]
erased-serde = "0.3"
linkme = "0.2"
once_cell = "1"
paste = "1"
serde = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
